tests/__snapshots__/api-toAcceptProps-special-cases-stderr.snap.txt
Error: Component accepts props of the given type.

Type '{ one: string; }' is assignable to type '{ one: string; }'.

   8 | 
   9 |     expect(Default).type.toAcceptProps({ one: "sample" });
  10 |     expect(Default).type.not.toAcceptProps({ one: "sample" }); // fail
     |                                            ~~~~~~~~~~~~~~~~~
  11 | 
  12 |     expect(Default).type.not.toAcceptProps({});
  13 |     expect(Default).type.toAcceptProps({}); // fail

       at ./__typetests__/special-cases.tst.tsx:10:44 ❭ special cases ❭ when the 'props' argument has a default value

Error: Component does not accept props of the given type.

Type '{}' is not assignable to type '{ one: string; }'.
Property 'one' is required in type '{ one: string; }'.

  11 | 
  12 |     expect(Default).type.not.toAcceptProps({});
  13 |     expect(Default).type.toAcceptProps({}); // fail
     |                                        ~~
  14 | 
  15 |     expect(Default).type.not.toAcceptProps({ two: false });
  16 |     expect(Default).type.toAcceptProps({ two: false }); // fail

       at ./__typetests__/special-cases.tst.tsx:13:40 ❭ special cases ❭ when the 'props' argument has a default value

Error: Component does not accept props of the given type.

Type '{ two: boolean; }' is not compatible with type '{ one: string; }'.
Property 'two' does not exist in type '{ one: string; }'.

  14 | 
  15 |     expect(Default).type.not.toAcceptProps({ two: false });
  16 |     expect(Default).type.toAcceptProps({ two: false }); // fail
     |                                          ~~~
  17 | 
  18 |     expect(Default).type.not.toAcceptProps({ one: false });
  19 |     expect(Default).type.toAcceptProps({ one: false }); // fail

       at ./__typetests__/special-cases.tst.tsx:16:42 ❭ special cases ❭ when the 'props' argument has a default value

Error: Component does not accept props of the given type.

Type '{ two: boolean; }' is not assignable to type '{ one: string; }'.
Property 'one' is required in type '{ one: string; }'.

  14 | 
  15 |     expect(Default).type.not.toAcceptProps({ two: false });
  16 |     expect(Default).type.toAcceptProps({ two: false }); // fail
     |                                        ~~~~~~~~~~~~~~
  17 | 
  18 |     expect(Default).type.not.toAcceptProps({ one: false });
  19 |     expect(Default).type.toAcceptProps({ one: false }); // fail

       at ./__typetests__/special-cases.tst.tsx:16:40 ❭ special cases ❭ when the 'props' argument has a default value

Error: Component does not accept props of the given type.

Type '{ one: boolean; }' is not assignable to type '{ one: string; }'.
Types of property 'one' are incompatible.
Type 'boolean' is not assignable to type 'string'.

  17 | 
  18 |     expect(Default).type.not.toAcceptProps({ one: false });
  19 |     expect(Default).type.toAcceptProps({ one: false }); // fail
     |                                          ~~~
  20 |   });
  21 | 
  22 |   test("when the 'props' is a union", () => {

       at ./__typetests__/special-cases.tst.tsx:19:42 ❭ special cases ❭ when the 'props' argument has a default value

Error: Component accepts props of the given type.

Type '{ one: string; }' is assignable to type 'One | Other'.

  33 | 
  34 |     expect(OneOrTheOther).type.toAcceptProps({ one: "Pass" });
  35 |     expect(OneOrTheOther).type.not.toAcceptProps({ one: "Pass" }); // fail
     |                                                  ~~~~~~~~~~~~~~~
  36 | 
  37 |     expect(OneOrTheOther).type.toAcceptProps({ two: "Pass" });
  38 |     expect(OneOrTheOther).type.not.toAcceptProps({ two: "Pass" }); // fail

       at ./__typetests__/special-cases.tst.tsx:35:50 ❭ special cases ❭ when the 'props' is a union

Error: Component accepts props of the given type.

Type '{ two: string; }' is assignable to type 'One | Other'.

  36 | 
  37 |     expect(OneOrTheOther).type.toAcceptProps({ two: "Pass" });
  38 |     expect(OneOrTheOther).type.not.toAcceptProps({ two: "Pass" }); // fail
     |                                                  ~~~~~~~~~~~~~~~
  39 | 
  40 |     expect(OneOrTheOther).type.not.toAcceptProps({ one: "Fail", two: "Fail" });
  41 |     expect(OneOrTheOther).type.toAcceptProps({ one: "Fail", two: "Fail" }); // fail

       at ./__typetests__/special-cases.tst.tsx:38:50 ❭ special cases ❭ when the 'props' is a union

Error: Component does not accept props of the given type.

Type '{ one: string; two: string; }' is not assignable to type 'One | Other'.
Type '{ one: string; two: string; }' is not assignable to type 'One'.
Types of property 'two' are incompatible.
Type 'string' is not assignable to type 'undefined'.

  39 | 
  40 |     expect(OneOrTheOther).type.not.toAcceptProps({ one: "Fail", two: "Fail" });
  41 |     expect(OneOrTheOther).type.toAcceptProps({ one: "Fail", two: "Fail" }); // fail
     |                                                             ~~~
  42 | 
  43 |     expect(OneOrTheOther).type.not.toAcceptProps({});
  44 |     expect(OneOrTheOther).type.toAcceptProps({}); // fail

       at ./__typetests__/special-cases.tst.tsx:41:61 ❭ special cases ❭ when the 'props' is a union

Error: Component does not accept props of the given type.

Type '{ one: string; two: string; }' is not assignable to type 'One | Other'.
Type '{ one: string; two: string; }' is not assignable to type 'Other'.
Types of property 'one' are incompatible.
Type 'string' is not assignable to type 'undefined'.

  39 | 
  40 |     expect(OneOrTheOther).type.not.toAcceptProps({ one: "Fail", two: "Fail" });
  41 |     expect(OneOrTheOther).type.toAcceptProps({ one: "Fail", two: "Fail" }); // fail
     |                                                ~~~
  42 | 
  43 |     expect(OneOrTheOther).type.not.toAcceptProps({});
  44 |     expect(OneOrTheOther).type.toAcceptProps({}); // fail

       at ./__typetests__/special-cases.tst.tsx:41:48 ❭ special cases ❭ when the 'props' is a union

Error: Component does not accept props of the given type.

Type '{}' is not assignable to type 'One | Other'.
Type '{}' is not assignable to type 'One'.
Property 'one' is required in type 'One'.

  42 | 
  43 |     expect(OneOrTheOther).type.not.toAcceptProps({});
  44 |     expect(OneOrTheOther).type.toAcceptProps({}); // fail
     |                                              ~~
  45 | 
  46 |     expect(OneOrTheOther).type.not.toAcceptProps({ three: false });
  47 |     expect(OneOrTheOther).type.toAcceptProps({ three: false }); // fail

       at ./__typetests__/special-cases.tst.tsx:44:46 ❭ special cases ❭ when the 'props' is a union

Error: Component does not accept props of the given type.

Type '{}' is not assignable to type 'One | Other'.
Type '{}' is not assignable to type 'Other'.
Property 'two' is required in type 'Other'.

  42 | 
  43 |     expect(OneOrTheOther).type.not.toAcceptProps({});
  44 |     expect(OneOrTheOther).type.toAcceptProps({}); // fail
     |                                              ~~
  45 | 
  46 |     expect(OneOrTheOther).type.not.toAcceptProps({ three: false });
  47 |     expect(OneOrTheOther).type.toAcceptProps({ three: false }); // fail

       at ./__typetests__/special-cases.tst.tsx:44:46 ❭ special cases ❭ when the 'props' is a union

Error: Component does not accept props of the given type.

Type '{ three: boolean; }' is not assignable to type 'One | Other'.
Type '{ three: boolean; }' is not compatible with type 'One'.
Property 'three' does not exist in type 'One'.

  45 | 
  46 |     expect(OneOrTheOther).type.not.toAcceptProps({ three: false });
  47 |     expect(OneOrTheOther).type.toAcceptProps({ three: false }); // fail
     |                                                ~~~~~
  48 |   });
  49 | });
  50 | 

       at ./__typetests__/special-cases.tst.tsx:47:48 ❭ special cases ❭ when the 'props' is a union

Error: Component does not accept props of the given type.

Type '{ three: boolean; }' is not assignable to type 'One | Other'.
Type '{ three: boolean; }' is not assignable to type 'One'.
Property 'one' is required in type 'One'.

  45 | 
  46 |     expect(OneOrTheOther).type.not.toAcceptProps({ three: false });
  47 |     expect(OneOrTheOther).type.toAcceptProps({ three: false }); // fail
     |                                              ~~~~~~~~~~~~~~~~
  48 |   });
  49 | });
  50 | 

       at ./__typetests__/special-cases.tst.tsx:47:46 ❭ special cases ❭ when the 'props' is a union

Error: Component does not accept props of the given type.

Type '{ three: boolean; }' is not assignable to type 'One | Other'.
Type '{ three: boolean; }' is not compatible with type 'Other'.
Property 'three' does not exist in type 'Other'.

  45 | 
  46 |     expect(OneOrTheOther).type.not.toAcceptProps({ three: false });
  47 |     expect(OneOrTheOther).type.toAcceptProps({ three: false }); // fail
     |                                                ~~~~~
  48 |   });
  49 | });
  50 | 

       at ./__typetests__/special-cases.tst.tsx:47:48 ❭ special cases ❭ when the 'props' is a union

Error: Component does not accept props of the given type.

Type '{ three: boolean; }' is not assignable to type 'One | Other'.
Type '{ three: boolean; }' is not assignable to type 'Other'.
Property 'two' is required in type 'Other'.

  45 | 
  46 |     expect(OneOrTheOther).type.not.toAcceptProps({ three: false });
  47 |     expect(OneOrTheOther).type.toAcceptProps({ three: false }); // fail
     |                                              ~~~~~~~~~~~~~~~~
  48 |   });
  49 | });
  50 | 

       at ./__typetests__/special-cases.tst.tsx:47:46 ❭ special cases ❭ when the 'props' is a union

